--- a/word/todo/puncturations/^.md
+++ b/word/todo/puncturations/^.md
@@ -24,6 +24,16 @@ hat 就很好理解了，因为它就像一个尖尖的帽子一样。
 用这个符号的时候有没有感觉特别的难受。
 它的样子太奇怪了。
 
+nodejs 中，
+可以用tide 指定子版本的自动升级。借用的生活中稍微的意思。
+是一个非常漂亮的用法。
+【鼓掌效果】
+这个我们到 control 键的时候，再详细说。
+
+![xxx](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/2022-05-01%20at%2016.14.png)
+
+
+
 很正常，因为它本来是另外一个用途，
 我一说，你肯定能想起来。
 
