--- a/word/todo/puncturations/井.md
+++ b/word/todo/puncturations/井.md
@@ -1,3 +1,228 @@
 
+Hash. Pound. Number. Octothorpe. Grid. Crunch. Diamond. Sharp. Mesh. Crosshatch. Thud. Thump. Splat. Scratchmark. Square. Hex. Flash. Tic-tac-toe. Pig-pen.
 
-number sign
+
+
+---
+
+# 开场
+大家好，欢迎来到我的IT 趣英语，
+假如你想在办公室，光明正大地扯淡
+那 # 号这个素材，你可千万别漏了。
+
+
+![number sign 图片](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/computer_key_num_row_3-removebg-preview.png)
+
+![number sign](https://images2.minutemediacdn.com/image/upload/c_fill,w_1080,ar_16:9,f_auto,q_auto,g_auto/shape%2Fcover%2Fsport%2Fpoundsign-59c2c0c034e02576e1d845816b686518.png)
+
+--- 
+## 名字
+
+假如说 @ 符号是 名字最多符号的话，
+那么， # 号就是故事最多的符号。
+
+它 在英文中，每个叫法背后，都有个有趣的故事。
+
+
+---
+## 1. number sign
+第一种：number sign
+
+在远古时代，一个人家里养了一群羊。
+每次放牧回来，把羊赶紧羊圈的时候都要数一数。
+
+但因为当时还没有十进制，假如养了小一百只，怎么数。
+并且数数的时候，容易数着数着突然忘了数到几了，这个问题如何解决。
+
+于是，一种 "符号计数法" 就被发明出来了。
+
+![number sign history](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/IAgipr.jpg)
+
+那你说，这个不好用，假如有5只羊一起骑着进羊圈，都来不及画。
+我直接还一横线。
+
+欧洲，北美，南非都有类似的用法。
+
+在中国的用法：
+
+![tall mark china](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/9awUQC.jpg)
+
+5 个一组最好用，世界各地，不约而同都使用了这个。
+
+符号计数法，被放到印刷中，就被简化抽象成了 井 号。
+
+现实中有趣的应用：
+> Tally marks sign warning hikers on the trail to Hanakapiai Beach
+
+![Hawaiian islands](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/witImR.jpg)
+
+![Hanakapiai Beach](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/Kcrgjm.jpg)
+
+---
+
+## 2. pound sign
+
+pound：磅。代表的符号是 lb。
+在实际操作中，为了避免让人 把lb 误认为 1b， 就把 l 上面几个横线，
+
+只加到l 上面，太短了，又不容易看到，就干脆都了b 上。
+℔
+
+到这里，磅这个重量符号，就有点像 井 号了。
+
+真正把 ℔ 变成井 号的，是牛顿。对，就那个牛顿。
+
+
+
+
+
+---
+## 3. sharp sign
+
+sharp 是一个音乐符号，代表在原来音调的基础上，升半个音。
+
+![music sharp sign](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/2022-05-05%20at%2021.28.png)
+
+这个符号和井好是有区别的：
+
+这个是音乐中的 sharp 符号
+
+![music sharp sign](https://res.cloudinary.com/the-online-metronome/image/upload/v1631114728/theonlinemetronome/sharp_symbol_in_music_09e7169e4a_q57yha.png)
+
+这个是键盘上的 井 号。
+
+![number sign](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/1200px-Hash-transbg.svg-removebg-preview.png)
+
+但是，键盘上没有这个音乐符号呀，实际中，只能用井号代替sharp 符号了。
+所以c sharp 被一些人叫成c 井， 也不算冤枉。
+
+另外，关于 c sharp
+里面也有非常精彩的故事，它和瑜伽，宇宙，都有比较深的连接。
+后面有合适的机会给大家介绍。
+
+---
+## 4. （cross） hash sign
+
+---
+## 5. hashtag
+
+---
+## 6. octothrope
+
+---
+## 用哪个名字
+
+突然有6个名字冒出来，你是不是一下子不知道用哪个？
+
+![number sign](https://raw.githubusercontent.com/wangtiejun001/images_markdown/master/uPic/FORosr.jpg)
+
+---
+
+--- 
+## 结语：
+但真实的情况就是这样。
+每个人在不同的场景，都有不同的叫法。
+
+
+看完这个视频之后，
+不但任何人给你说 # 号， 你都能轻松认出来。
+并且还知道了 5 个扯淡素材。
+
+想用哪个用哪个。
+
+
+- facetime
+
+但假如要用，突然又想不起来怎么办？
+你不是会数羊嘛！
+
+
+---
+
+
+
+
+
+
+
+
+- name: 
+hashtags on social media
+Also called a hash or a pound sign, the symbol has roots in 14th century Latin.
+
+
+Whether called hash, pound, number sign, lumberyard — the symbol traces back to Ancient Rome.
+
+
+cross hatch
+= 
+cross hash
+
+
+## video source: history of pound sign
+https://www.pbs.org/video/where-does-the-hashtag-symbol-come-from-vtyi5h/
+
+
+Sir Isaac Newton shows a middle point in the process
+
+![Image courtesy of Keith Houston](https://99percentinvisible.org/app/uploads/2014/12/01-octothrope.jpg)
+![pound sign](http://static.dictionary.com/homepage/carousel/June-2012/lb.jpeg)
+
+
+
+
+or number sign, or hash mark, or octothorpe
+
+![number sign](https://upload.wikimedia.org/wikipedia/commons/thumb/5/5a/Tally_marks.svg/120px-Tally_marks.svg.png)
+
+![nubmer sign](https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Tally_marks_3.svg/120px-Tally_marks_3.svg.png)
+
+℔, which stood for weight in pounds (fun fact: lb stands for libra pondo – Italian for weight in pounds). When traders and bookkeepers would hastily write ℔ in their records in cursive, it’d end up looking like the letters had been crossed out not once, but twice.
+
+
+
+
+
+## official name:
+octothorpe
+
+
+
+
+- hastag:
+![crits messia](https://99percentinvisible.org/app/uploads/2014/12/first-hash.jpg)
+
+
+Eventually, AT&T added the symbol, along with the asterisk, to their telephones in order to make the keypad a neat square.
+already exist in standard type writers, but don't has a anme at that time.
+a few employees at Bell Labs set up a name:
+octotherp
+octothorpe
+
+
+---
+单词分解，词根
+
+
+问题：如何转换
+
+---
+## 相关趣事
+
+
+
+
+---
+## IT 场景
+
+IT 中，Word 一般出现在
+
+
+---
+## 相关的短语
+
+---
+## 结束语
+
+
+---
